# JameGam2024

./: .gitignore  Cargo.toml  README.md
assets/: Sprite-0001.aseprite
src/: audio.rs  background.rs  camera.rs  collision.rs  enemy.rs  main.rs  mainmenu.rs  pickup.rs  pixel_grid_snap.rs  player.rs  ui.rs  utils.rs
