[package]
name = "JameGam2024"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_hanabi = "0.14"
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
rand = { version = "0.8.5", features = ["small_rng"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
